# travel-model-one

./: .classpath  .env.example  .gitignore  .project  .renvignore  CompareTazDataAcrossYears.twb  CoreSummaries.Rmd  CoreSummaries.twb  DEV_NOTES.md  Employment.twb  How to Create BCM Scenario.md  QuickStart_v0.2.docx  QuickStart_v1.0.docx  README.md  copyCoreSummariesInputs.bat  custom.css  pyproject.toml  tm15-python310.yml  tm151-python27.yml  tm15_python310_conda_env.md
2010/: README.txt  TAZ1454 2010 Land Use.csv  prepare_2010_census_data.ipynb
2015/: .RData  2015 unit person and HH balancing.R  2015_enrollment_MAZ_v2.2.ipynb  ACS 2013-2017 Block Group Vars3.csv  ACS 2013-2017 create TAZ data for 2015.R  ACS2013-2017_PUMS2012-2016_HH_Worker_Correction_Factors.csv  Import block group data.R  README 2.md  README.md  TAZ1454 2015 District Summary.csv  TAZ1454 2015 Land Use.csv  TAZ1454 2015 Land Use.xlsx  TAZ1454 2015 Popsim Vars County.csv  TAZ1454 2015 Popsim Vars Region.csv  TAZ1454 2015 Popsim Vars.csv  TAZ1454_2015_long.csv  Tableau_2010_2015_Comparison.csv
2020/: ACS 2017-2021 create TAZ data for 2020.R  Noodling for 2020 TAZ data.r  Readme.md  (+9 more)
utilities/trucks/trucks_2026_update/: .gitignore  README.md  pyproject.toml
utilities/trucks/trucks_2026_update/configs/: evaluation.yaml  model_pipeline_configs.yaml  model_specs.yaml  observed_data_processing_configs.yaml  od_projection_configs.yaml  travel_model_scenarios.yaml  trip_distribution.yaml
utilities/trucks/trucks_2026_update/configs/observed/: bata_2023.yaml  caltrans_2018.yaml
utilities/trucks/trucks_2026_update/models/truck_trip_generation/20260525_150722/: tazData.csv  truck_trip_generation_zone.csv
utilities/trucks/trucks_2026_update/models/truck_trip_generation/20260525_150722/tableau/: model_coefficients.csv  model_comparison.csv
utilities/trucks/trucks_2026_update/notebooks/: evaluation-plots-observed-sw-mtc.twb  statewide_freight_data_EDA.ipynb  tod.ipynb  trip_distribution_data_preparation.ipynb
utilities/trucks/trucks_2026_update/reports/csf2tdm_eda/: county_od_daily.csv  mtc_region_travel_time_distribution.csv  tln_trip_length_distribution.csv
utilities/trucks/trucks_2026_update/reports/eda/: tln_land_use.csv  tln_land_use.xlsx
utilities/trucks/trucks_2026_update/src/: utils.py
utilities/trucks/trucks_2026_update/src/data/EDA/: configs.py  mtc_od.py  mtc_skims_tpp_to_omx.s  pipeline.py  sw_od.py  trip_distributions.py  trip_rates.py
utilities/trucks/trucks_2026_update/src/data/observed/: build_observed_dataset.py  schema.py
utilities/trucks/trucks_2026_update/src/data/observed/bata/: aadtt.py  pipeline.py  standardize.py
utilities/trucks/trucks_2026_update/src/data/observed/caltrans/: aadtt.py  georeference_caltrans_station_counts.py  match_stations_to_links.py  pipeline.py  standardize.py
utilities/trucks/trucks_2026_update/src/data/observed_data_processing/: aadtt.py  match_stations_to_links.py  pipeline.py
utilities/trucks/trucks_2026_update/src/data/od_projection/: crosswalk.py  format_mtc_output.py  pipeline.py  prepare_projection_inputs.py  projection.py  readme.md  tpp_to_omx.s  trip_generation.py
utilities/trucks/trucks_2026_update/src/evaluation/: build_dataset.py  run_evaluation.py
utilities/trucks/trucks_2026_update/src/evaluation/plots/: scatter_obs_vs_pred.py  vmt_comparison.py
utilities/trucks/trucks_2026_update/src/models/: README.md  engine.py  estimate.py  estimation.py  prediction.py  registry.py  specs.py
utilities/trucks/trucks_2026_update/src/models/simple_assigment/: RunAssignment.bat  convert_sw_with_mtc_format_omx_to_tpp.s  readme.md
utilities/trucks/trucks_2026_update/src/models/travel-model/: config.py  lock.py  manager.py  manifest.py  resolvers.py  run.py  runner.py  workspace.py
utilities/trucks/trucks_2026_update/src/models/travel_model/: RunIteration.bat  config.py  converter.py  lock.py  manager.py  manifest.py  pipeline.py  resolvers.py  run_scenarios.py  runner.py  workspace.py
utilities/trucks/trucks_2026_update/src/models/travel_model/cube_scripts/: net_to_shp.s  tpp_to_omx.s
utilities/trucks/trucks_2026_update/src/models/trip_distribution/: calibration.py  config.py  friction.py  gravity.py  io.py  run.py  validation.py
utilities/trucks/trucks_2026_update/src/models/trip_distribution/validation/: __init__.py  excel.py  plots.py  report.py
utilities/trucks/trucks_2026_update/src/reporting/: tableau.py
utilities/trucks/trucks_2026_update/src/validation/: metrics.py  model_selection.py
utilities/trucks/trucks_2026_update/tests/models/simple_assignment/: test_config.py  test_lock.py  test_manager.py  test_manifest.py  test_resolvers.py  test_runner.py  test_workspace.py
utilities/trucks/trucks_2026_update/tests/models/travel_model/: smoke_test.py  test_config.py  test_converter.py  test_lock.py  test_manager.py  test_manifest.py  test_resolvers.py  test_runner.py  test_workspace.py
(+2781 files in other folders)
