[project]
name = "trucks-2026-update"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "openmatrix>=0.3.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
]
